# app/model/auth/auth_m.go
@@ -7,11 +7,12 @@ import (
 )
 
 type User struct {
-	UUID      uuid.UUID  `db:"id" json:"id"`
+	UUID      uuid.UUID  `db:"uuid" json:"uuid"`
 	Name      string     `db:"name" json:"name"`
 	Username  string     `db:"username" json:"username"`
 	Email     string     `db:"email" json:"email"`
 	Password  string     `db:"password" json:"password"`
+	RoleUUID  string     `db:"role_uuid" json:"role_uuid"`
 	CreatedAt time.Time  `db:"created_at" json:"created_at"`
 	UpdatedAt *time.Time `db:"updated_at" json:"updated_at"`
 	DeletedAt *time.Time `db:"deleted_at" json:"deleted_at"`
@@ -27,5 +28,21 @@ type Register struct {
 	Name     string `json:"name" form:"name"`
 	Username string `json:"username" form:"username"`
 	Email    string `json:"email" form:"email"`
+	RoleUUID string `db:"role_uuid" json:"role_uuid"`
 	Password string `json:"password" form:"password"`
+}
+
+type Role struct {
+	UUID uuid.UUID `db:"uuid" json:"uuid"`
+	Name string    `db:"name" json:"name"`
+}
+
+type Permission struct {
+	UUID uuid.UUID `db:"uuid" json:"uuid"`
+	Name string    `db:"name" json:"name"`
+}
+
+type RoleHasPermission struct {
+	RoleUUID       uuid.UUID `db:"role_uuid" json:"role_uuid"`
+	PermissionUUID uuid.UUID `db:"permission_uuid" json:"permission_uuid"`
 }
