# app/model/dashboard/user_m.go
@@ -11,6 +11,8 @@ type User struct {
 	Name      string     `db:"name" json:"name"`
 	Username  string     `db:"username" json:"username"`
 	Email     string     `db:"email" json:"email"`
+	RoleUUID  *uuid.UUID `db:"role_uuid" json:"role_uuid"`
+	RoleName  *string    `db:"role_name" json:"role_name"`
 	CreatedAt time.Time  `db:"created_at" json:"created_at"`
 	UpdatedAt *time.Time `db:"updated_at" json:"updated_at"`
 	DeletedAt *time.Time `db:"deleted_at" json:"deleted_at"`
@@ -21,21 +23,25 @@ type UserShow struct {
 	Name      string     `db:"name" json:"name"`
 	Username  string     `db:"username" json:"username"`
 	Email     string     `db:"email" json:"email"`
+	RoleUUID  *uuid.UUID `db:"role_uuid" json:"role_uuid"`
+	RoleName  *string    `db:"role_name" json:"role_name"`
 	CreatedAt time.Time  `db:"created_at" json:"created_at"`
 	UpdatedAt *time.Time `db:"updated_at" json:"updated_at"`
 	DeletedAt *time.Time `db:"deleted_at" json:"deleted_at"`
 }
 
 type StoreUser struct {
-	Name     string `json:"name" form:"name"`
-	Username string `json:"username" form:"username"`
-	Email    string `json:"email" form:"email"`
-	Password string `json:"password" form:"password"`
+	Name     string    `json:"name" form:"name"`
+	Username string    `json:"username" form:"username"`
+	Email    string    `json:"email" form:"email"`
+	Password string    `json:"password" form:"password"`
+	RoleUUID uuid.UUID `json:"role_uuid" form:"role_uuid"`
 }
 
 type UpdateUser struct {
-	Name     string `json:"name" form:"name"`
-	Username string `json:"username" form:"username"`
-	Email    string `json:"email" form:"email"`
-	Password string `json:"password" form:"password"`
+	Name     string    `json:"name" form:"name"`
+	Username string    `json:"username" form:"username"`
+	Email    string    `json:"email" form:"email"`
+	Password string    `json:"password" form:"password"`
+	RoleUUID uuid.UUID `json:"role_uuid" form:"role_uuid"`
 }
