# route/api/dashboard.go
@@ -7,29 +7,40 @@ import (
 )
 
 func Dashboard(a *fiber.App) {
-	// user := a.Group("/api/v1/users", middleware.JWTProtected())
+	dashboard := a.Group("/api/v1/dashboard", middleware.JWTProtected())
 
-	dasboard := a.Group("/api/v1/dashboard", middleware.JWTProtected())
+	user := dashboard.Group("/user")
+	user.Get("/", middleware.Permission("user-index"), controllers.UserIndex)
+	user.Get("/:id", middleware.Permission("user-show"), controllers.UserShow)
+	user.Post("/", middleware.Permission("user-store"), controllers.UserStore)
+	user.Put("/:id", middleware.Permission("user-update"), controllers.UserUpdate)
+	user.Delete("/:id", middleware.Permission("user-destroy"), controllers.UserDestroy)
 
-	user := dasboard.Group("/user")
-	user.Get("/", controllers.UserIndex)
-	user.Get("/:id", controllers.UserShow)
-	user.Post("/", controllers.UserStore)
-	user.Put("/:id", controllers.UserUpdate)
-	user.Delete("/:id", controllers.UserDestroy)
+	post_category := dashboard.Group("/post-category")
+	post_category.Get("/", middleware.Permission("post-category-index"), controllers.PostCategoryIndex)
+	post_category.Get("/:id", middleware.Permission("post-category-show"), controllers.PostCategoryShow)
+	post_category.Post("/", middleware.Permission("post-category-store"), controllers.PostCategoryStore)
+	post_category.Put("/:id", middleware.Permission("post-category-update"), controllers.PostCategoryUpdate)
+	post_category.Delete("/:id", middleware.Permission("post-category-destroy"), controllers.PostCategoryDestroy)
 
-	post_category := dasboard.Group("/post-category")
-	post_category.Get("/", controllers.PostCategoryIndex)
-	post_category.Get("/:id", controllers.PostCategoryShow)
-	post_category.Post("/", controllers.PostCategoryStore)
-	post_category.Put("/:id", controllers.PostCategoryUpdate)
-	post_category.Delete("/:id", controllers.PostCategoryDestroy)
+	post := dashboard.Group("/post")
+	post.Get("/", middleware.Permission("post-index"), controllers.PostIndex)
+	post.Get("/:id", middleware.Permission("post-show"), controllers.PostShow)
+	post.Post("/", middleware.Permission("post-store"), controllers.PostStore)
+	post.Put("/:id", middleware.Permission("post-update"), controllers.PostUpdate)
+	post.Delete("/:id", middleware.Permission("post-destroy"), controllers.PostDestroy)
 
-	post := dasboard.Group("/post")
-	post.Get("/", controllers.PostIndex)
-	post.Get("/:id", controllers.PostShow)
-	post.Post("/", controllers.PostStore)
-	post.Put("/:id", controllers.PostUpdate)
-	post.Delete("/:id", controllers.PostDestroy)
+	role := dashboard.Group("/role")
+	role.Get("/", middleware.Permission("role-index"), controllers.RoleIndex)
+	role.Get("/:id", middleware.Permission("role-show"), controllers.RoleShow)
+	role.Post("/", middleware.Permission("role-store"), controllers.RoleStore)
+	role.Put("/:id", middleware.Permission("role-update"), controllers.RoleUpdate)
+	role.Delete("/:id", middleware.Permission("role-destroy"), controllers.RoleDestroy)
 
+	permission := dashboard.Group("/permission")
+	permission.Get("/", middleware.Permission("permission-index"), controllers.PermissionIndex)
+	permission.Get("/:id", middleware.Permission("permission-show"), controllers.PermissionShow)
+	permission.Post("/", middleware.Permission("permission-store"), controllers.PermissionStore)
+	permission.Put("/:id", middleware.Permission("permission-update"), controllers.PermissionUpdate)
+	permission.Delete("/:id", middleware.Permission("permission-destroy"), controllers.PermissionDestroy)
 }
